[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! I am Mustafa Shaikh and This is my first webapp.
+        <h1>Hello Welcome to First Webapp</h1>
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+          <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
