[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://www.facebook.com/photo.php?fbid=1681916422087884&set=pb.100008086270829.-2207520000.1502259016.&type=3&theater"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! I am Mustafa Shaikh and This is my first webapp.
-        <h4>Hello Welcome to First Webapp</h4>
+        <h5>Hello Welcome to First Webapp</h5>
         </div>
           <script type="text/javascript" src="/ui/main.js">
         </script>
