[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://www.facebook.com/photo.php?fbid=1753901231556069&set=pb.100008086270829.-2207520000.1502259016.&type=3&size=887%2C887"/>
+            <img src="https://www.instagram.com/p/BW7pSNjlPuxbCaXj5kdpmdhQlicMbsoCvbNzCE0/"/>
         </div>
         <br>
         <div class="center text-big bold">
